--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title></title>
 
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <div class="container">
