--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
   </div>
   
     <p>&nbsp;</p>  <p>&nbsp;</p>  <p>&nbsp;</p>  <p>&nbsp;</p>
-  <div>Photo by Luis del Río: https://www.pexels.com/photo/person-walking-between-green-forest-trees-15286/
-Photo by stein egil liland: https://www.pexels.com/photo/scenic-view-of-snow-capped-mountains-during-night-3408744/
-Photo by Jaime Reimer: https://www.pexels.com/photo/beautiful-view-of-moraine-lake-2662116/
-Photo by Kammeran Gonzalez-Keola: https://www.pexels.com/photo/man-riding-surfboard-in-wavy-ocean-7925859/
-Photo by Alesia  Kozik: https://www.pexels.com/photo/river-in-the-middle-of-forest-6004828/
+	Images are taken from : <br>
+  <div>Photo by Luis del Río: https://www.pexels.com/photo/person-walking-between-green-forest-trees-15286/<br>
+Photo by stein egil liland: https://www.pexels.com/photo/scenic-view-of-snow-capped-mountains-during-night-3408744/<br>
+Photo by Jaime Reimer: https://www.pexels.com/photo/beautiful-view-of-moraine-lake-2662116/<br>
+Photo by Kammeran Gonzalez-Keola: https://www.pexels.com/photo/man-riding-surfboard-in-wavy-ocean-7925859/<br>
+Photo by Alesia  Kozik: https://www.pexels.com/photo/river-in-the-middle-of-forest-6004828/<br>
 </div>
   <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
